-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.3.1, 5.5.0
-
None
-
Tested on Windows. Not tested on OS X with native dialog.
-
929509ea03b116588bdae38391377ec1ec976845
Set such stylesheet to QFontDialog or it's parent:
- {
font-family: "Calibri";
font-size: 18px;
}
Fonts and sizes may be different.
Run the program and try to get font using QFontDialog... it will return font set in stylesheet anyway.
And then go to qfontdialog.cpp line 840 (just got it from Github):
return d->sampleEdit->font();
It is result of "QFont QFontDialog::currentFont()".
Please, change it to something more working...
| For Gerrit Dashboard: QTBUG-41513 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 97753,3 | QStyleSheetStyle: Don't interfere with QFontDialog | 5.4 | qt/qtbase | Status: MERGED | +2 | 0 |