tests/auto/gui/text/qrawfont/qrawfont.pro
@@ -7,9 +7,5 @@ QT = core core-private gui gui-private testlib
 SOURCES += \
     tst_qrawfont.cpp
 
-TESTDATA += testfont_bold_italic.ttf  testfont.ttf
-
-android {
-    RESOURCES += \
-        testdata.qrc
-}
+RESOURCES += \
+    testdata.qrc
